--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-fastapi
-gunicorn
-uvicorn
-jinja2
-pytest
-requests
-python-dotenv
-pytesseract
-Pillow
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+gunicorn==21.2.0
+python-multipart==0.0.6
+pytesseract==0.3.10
+Pillow==10.1.0
+python-dotenv==1.0.0
+jinja2==3.1.2
