Added Certbot configs in Docker

--- a/nginx/prococr.conf
+++ b/nginx/prococr.conf
@@ -2,12 +2,17 @@ upstream fastapi_backend {
     server web:8000;
 }
 
+# HTTP Server - For ACME challenge and initial certificate
 server {
     listen 80;
-    server_name 80.225.204.130;  # Change to your domain or VPS IP
+    server_name proc-ocr.duckdns.org;  # ← Replace with YOUR duckdns domain
     
-    client_max_body_size 20M;
+    # ACME challenge for Let's Encrypt
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
     
+    # Serve app on HTTP (temporary, until we get certificate)
     location / {
         proxy_pass http://fastapi_backend;
         proxy_set_header Host $host;
@@ -19,4 +24,6 @@ server {
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
     }
+    
+    client_max_body_size 20M;
 }
