--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,14 +18,26 @@ services:
     image: nginx:alpine
     container_name: prococr_nginx
     ports:
-      - "80:80"       # HTTP only
+      - "80:80"       # HTTP
+      - "443:443"     # HTTPS
     volumes:
       - ./nginx/prococr.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./certbot/conf:/etc/letsencrypt:ro
+      - ./certbot/www:/var/www/certbot:ro
     depends_on:
       - web
     networks:
       - prococr_network
     restart: unless-stopped
+    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+
+  certbot:
+    image: certbot/certbot
+    container_name: prococr_certbot
+    volumes:
+      - ./certbot/conf:/etc/letsencrypt
+      - ./certbot/www:/var/www/certbot
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
 networks:
   prococr_network:
