--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,10 @@ services:
     volumes:
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+    networks:
+      - prococr_network
+    # Remove entrypoint - use default certbot entrypoint
+    command: sh -c "trap exit TERM; while :; do certbot renew --quiet; sleep 12h & wait $${!}; done"
 
 networks:
   prococr_network:
