--- a/nginx/prococr.conf
+++ b/nginx/prococr.conf
@@ -2,17 +2,48 @@ upstream fastapi_backend {
     server web:8000;
 }
 
-# HTTP Server - For ACME challenge and initial certificate
+# HTTP Server - Redirect to HTTPS
 server {
     listen 80;
-    server_name proc-ocr.duckdns.org;  # ← Replace with YOUR duckdns domain
+    server_name proc-ocr.duckdns.org;  # ← Your domain
     
-    # ACME challenge for Let's Encrypt
+    # ACME challenge (for certificate renewal)
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
     
-    # Serve app on HTTP (temporary, until we get certificate)
+    # Redirect all HTTP traffic to HTTPS
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+# HTTPS Server
+server {
+    listen 443 ssl http2;
+    server_name proc-ocr.duckdns.org;  # ← Your domain
+    
+    # SSL Certificate paths
+    ssl_certificate /etc/letsencrypt/live/proc-ocr.duckdns.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/proc-ocr.duckdns.org/privkey.pem;
+    
+    # SSL Configuration
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+    
+    # Security Headers
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header X-Frame-Options "SAMEORIGIN" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    
+    # File upload size limit
+    client_max_body_size 20M;
+    
+    # Proxy to FastAPI
     location / {
         proxy_pass http://fastapi_backend;
         proxy_set_header Host $host;
@@ -25,5 +56,4 @@ server {
         proxy_read_timeout 60s;
     }
     
-    client_max_body_size 20M;
 }
